--- a/packages/awsfirehose/changelog.yml
+++ b/packages/awsfirehose/changelog.yml
@@ -1,4 +1,10 @@
 # newer versions go on top
+- version: 0.2.0
+  changes:
+    - description: remove redudant `.logs` suffix from dataset name
+      type: enhancement
+      link: https://github.com/elastic/integrations/pull/XXXX
+
 - version: 0.1.0
   changes:
     - description: initial release
